@@ -102,6 +102,6 @@ public class SortedSetDocValuesField extends Field {
    * {@link BinaryPoint#newSetQuery}.
    */
   public static Query newSlowSetQuery(String field, BytesRef... values) {
-    return new SortedSetDocValuesSetQuery(field, values.clone());
+    return new SortedSetDocValuesSetQuery(field, values);
   }
 }
